--- a/firmware/tunerstudio/rusefi.ini
+++ b/firmware/tunerstudio/rusefi.ini
@@ -54,20 +54,19 @@ enable2ndByteCanID = false
 	tpsErrorHighValue				= scalar, S16,	338,	"*C", 1, 0, -40, 200, 1
 	primingSquirtDurationMs			= scalar, F32,	340,	"*C", 1, 0, -40, 200, 1
 	engineCycle						= scalar, S32,	344,	"engine cycle", 1, 0, 0, 1000, 0
+	cranking_baseFuel				= scalar, F32,	348,	"ms", 1, 0, 0, 200, 1
+	cranking_rpm					= scalar, S16,	352,	"RPM", 1, 0, 0, 3000, 0
+;skipping cranking_alignmentFill offset 354
+	map_samplingAngleBins			= array, F32,	356,	[8],	"RPM", 1, 0, 0.0, 18000, 2
+	map_samplingAngle				= array, F32,	388,	[8],	"deg", 1, 0, 0.0, 90, 2
+	map_samplingWindowBins			= array, F32,	420,	[8],	"RPM", 1, 0, 0.0, 18000, 2
+	map_samplingWindow				= array, F32,	452,	[8],	"deg", 1, 0, 0.0, 90, 2
+	map_sensor_valueAt0				= scalar, F32,	484,	"kpa", 1, 0, 0, 450, 2
+	map_sensor_valueAt5				= scalar, F32,	488,	"kpa", 1, 0, 0, 450, 2
 
-	cranking_baseFuel      = scalar,  F32,    348,        "ms",       1,     0,    0, 200,     1
-	cranking_rpm            = scalar,  S16,    352,        "RPM",      1,     0,    0, 3000,      0 ; * (  2 bytes)
-	
-	map_samplingAngleBins    = array,   F32,    356, [8],   "RPM",      1,     0,   0.0,    18000,   2; size 64
-	map_samplingAngle        = array,   F32,    388, [8],   "deg",      1,     0,   0.0,    90,   2; size 64
-	map_samplingWindowBins   = array,   F32,    420, [8],   "RPM",      1,     0,   0.0,    18000,   2; size 64
-	map_samplingWindow       = array,   F32,    452, [8],   "deg",      1,     0,   0.0,    90,   2; size 64
-	
-	map_sensor_valueAt0             = scalar,  F32,    484,        "kpa",      1,     0,    0, 450,     2;     size 4
-	map_sensor_valueAt5                  = scalar,  F32,    488,        "kpa",      1,     0,    0, 450,     2;     size 4
 	map_sensor_type           = bits,    U32,    492, [0:1]  "Custom", "DENSO183", "MPX4250", "INVALID"
                                                            ;ADC0   ADC1   ADC2   ADC3   ADC4   ADC5   ADC6   ADC7   ADC8   ADC9   ADC10  ADC11  ADC12  ADC13  ADC14  ADC15 
-	mapAdcInput             = bits,    U32,    496, [0:3]  "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
+	map_sensor_hwChannel             = bits,    U32,    496, [0:3]  "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
 
 	clt_t1                  = scalar,  F32,    500,        "°C",       1,     0,    -40, 200,     1;     size 4
 	clt_t2                  = scalar,  F32,    504,        "°C",       1,     0,    -40, 200,     1;     size 4
@@ -850,7 +849,7 @@ fileVersion = { 20150112 }
 		field = "CLT ADC input", 						cltAdcInput
 		field = "IAT ADC input", 						iatAdcInput
 		field = "MAF ADC input", 						mafAdcInput
-		field = "MAP ADC input", 						mapAdcInput
+		field = "MAP ADC input", 						map_sensor_hwChannel
 		field = "Baro ADC input", 						baroAdcInput
 		field = "vBatt ADC input", 						vbattAdcInput
 		field = "AFR ADC input", 						afrAdcInput
