https://sourceforge.net/p/rusefi/tickets/125/

--- a/firmware/tunerstudio/rusefi.ini
+++ b/firmware/tunerstudio/rusefi.ini
@@ -68,24 +68,24 @@ enable2ndByteCanID = false
                                                            ;ADC0   ADC1   ADC2   ADC3   ADC4   ADC5   ADC6   ADC7   ADC8   ADC9   ADC10  ADC11  ADC12  ADC13  ADC14  ADC15 
 	map_sensor_hwChannel             = bits,    U32,    496, [0:3]  "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
 
-	clt_t1                  = scalar,  F32,    500,        "°C",       1,     0,    -40, 200,     1;     size 4
-	clt_t2                  = scalar,  F32,    504,        "°C",       1,     0,    -40, 200,     1;     size 4
-	clt_t3                  = scalar,  F32,    508,        "°C",       1,     0,    -40, 200,     1;     size 4
-	clt_r1                  = scalar,  F32,    512,        "Ohm",      1,     0,    0, 200000,     1;     size 4
-	clt_r2                  = scalar,  F32,    516,        "Ohm",      1,     0,    0, 200000,     1;     size 4
-	clt_r3                  = scalar,  F32,    520,        "Ohm",      1,     0,    0, 200000,     1;     size 4
-	clt_bias                = scalar,  F32,    524,        "Ohm",      1,     0,    0, 200000,     1;     size 4
+	clt_tempC_1                  = scalar,  F32,    500,        "°C",       1,     0,    -40, 200,     1
+	clt_tempC_2                  = scalar,  F32,    504,        "°C",       1,     0,    -40, 200,     1
+	clt_tempC_3                  = scalar,  F32,    508,        "°C",       1,     0,    -40, 200,     1
+	clt_resistance_1                  = scalar,  F32,    512,        "Ohm",      1,     0,    0, 200000,     1
+	clt_resistance_2                  = scalar,  F32,    516,        "Ohm",      1,     0,    0, 200000,     1
+	clt_resistance_3                  = scalar,  F32,    520,        "Ohm",      1,     0,    0, 200000,     1
+	clt_bias_resistor                = scalar,  F32,    524,        "Ohm",      1,     0,    0, 200000,     1
 	;clt_a   364 size 4
 	;clt_b   368 size 4
 	;clt_c   372 size 4
 
-	iat_t1                  = scalar,  F32,    540,        "°C",       1,   0,    -40, 200,     1;     size 4
-	iat_t2                  = scalar,  F32,    544,        "°C",       1,   0,    -40, 200,     1;     size 4
-	iat_t3                  = scalar,  F32,    548,        "°C",       1,   0,    -40, 200,     1;     size 4
-	iat_r1                  = scalar,  F32,    552,        "Ohm",      1,   0,    0, 200000,     1;     size 4
-	iat_r2                  = scalar,  F32,    556,        "Ohm",      1,   0,    0, 200000,     1;     size 4
-	iat_r3                  = scalar,  F32,    560,        "Ohm",      1,   0,    0, 200000,     1;     size 4
-	iat_bias                = scalar,  F32,    564,        "Ohm",      1,   0,    0, 200000,     1;     size 4
+	iat_tempC_1                  = scalar,  F32,    540,        "°C",       1,   0,    -40, 200,     1
+	iat_tempC_2                  = scalar,  F32,    544,        "°C",       1,   0,    -40, 200,     1
+	iat_tempC_3                  = scalar,  F32,    548,        "°C",       1,   0,    -40, 200,     1
+	iat_resistance_1                  = scalar,  F32,    552,        "Ohm",      1,   0,    0, 200000,     1
+	iat_resistance_2                  = scalar,  F32,    556,        "Ohm",      1,   0,    0, 200000,     1
+	iat_resistance_3                  = scalar,  F32,    560,        "Ohm",      1,   0,    0, 200000,     1
+	iat_bias_resistor                = scalar,  F32,    564,        "Ohm",      1,   0,    0, 200000,     1
 	;iat_a  404 size 4
 	;iat_b  408 size 4
 	;iat_c  410 size 4	
@@ -782,16 +782,16 @@ fileVersion = { 20150112 }
 		field = "!Here is three pairs of thermistor temperature and his resistance."
 		field = "!Typical temperatures is -40°C, 0°C and 100°C"
 		field = ""
-		field = "Lowest temperature",  					clt_t1		
-		field = "Resistance @ LT",         	   			clt_r1
+		field = "Lowest temperature",  					clt_tempC_1		
+		field = "Resistance @ LT",         	   			clt_resistance_1
 		field = ""
-		field = "Middle temperature",    		  	    clt_t2
-		field = "Resistance @ MT",         	    		clt_r2
+		field = "Middle temperature",    		  	    clt_tempC_2
+		field = "Resistance @ MT",         	    		clt_resistance_2
 		field = ""
-		field = "Highest temperature",				 	clt_t3
-		field = "Resistance @ HT",         	    		clt_r3
+		field = "Highest temperature",				 	clt_tempC_3
+		field = "Resistance @ HT",         	    		clt_resistance_3
 		field = ""
-		field = "Bias Resistor Value",    	    		clt_bias
+		field = "Bias Resistor Value",    	    		clt_bias_resistor
 		field = ""
 
 ;			Engine->IAT Thermistor Settings
@@ -799,16 +799,16 @@ fileVersion = { 20150112 }
 		field = "!Here is three pairs of thermistor temperature and his resistance."
 		field = "!Typical temperatures is -40°C, 0°C and 100°C"
 		field = ""
-		field = "Lowest temperature",                   iat_t1		
-		field = "Resistance @ LT",         	   			iat_r1
+		field = "Lowest temperature",                   iat_tempC_1		
+		field = "Resistance @ LT",         	   			iat_resistance_1
 		field = ""
-		field = "Middle temperature",         	    	iat_t2
-		field = "Resistance @ MT",         	    		iat_r2
+		field = "Middle temperature",         	    	iat_tempC_2
+		field = "Resistance @ MT",         	    		iat_resistance_2
 		field = ""
-		field = "Highest temperature",         	    	iat_t3
-		field = "Resistance @ HT",         	    		iat_r3
+		field = "Highest temperature",         	    	iat_tempC_3
+		field = "Resistance @ HT",         	    		iat_resistance_3
 		field = ""
-		field = "Bias Resistor Value",    	    		iat_bias
+		field = "Bias Resistor Value",    	    		iat_bias_resistor
 		field = ""
 		
 ;			Engine->MAP Sensor Settings
