https://sourceforge.net/p/rusefi/tickets/125/

--- a/firmware/tunerstudio/rusefi.ini
+++ b/firmware/tunerstudio/rusefi.ini
@@ -63,32 +63,28 @@ enable2ndByteCanID = false
 	map_samplingWindow				= array, F32,	452,	[8],	"deg", 1, 0, 0.0, 90, 2
 	map_sensor_valueAt0				= scalar, F32,	484,	"kpa", 1, 0, 0, 450, 2
 	map_sensor_valueAt5				= scalar, F32,	488,	"kpa", 1, 0, 0, 450, 2
-
-	map_sensor_type           = bits,    U32,    492, [0:1]  "Custom", "DENSO183", "MPX4250", "INVALID"
-                                                           ;ADC0   ADC1   ADC2   ADC3   ADC4   ADC5   ADC6   ADC7   ADC8   ADC9   ADC10  ADC11  ADC12  ADC13  ADC14  ADC15 
-	map_sensor_hwChannel             = bits,    U32,    496, [0:3]  "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
-
-	clt_tempC_1                  = scalar,  F32,    500,        "°C",       1,     0,    -40, 200,     1
-	clt_tempC_2                  = scalar,  F32,    504,        "°C",       1,     0,    -40, 200,     1
-	clt_tempC_3                  = scalar,  F32,    508,        "°C",       1,     0,    -40, 200,     1
-	clt_resistance_1                  = scalar,  F32,    512,        "Ohm",      1,     0,    0, 200000,     1
-	clt_resistance_2                  = scalar,  F32,    516,        "Ohm",      1,     0,    0, 200000,     1
-	clt_resistance_3                  = scalar,  F32,    520,        "Ohm",      1,     0,    0, 200000,     1
-	clt_bias_resistor                = scalar,  F32,    524,        "Ohm",      1,     0,    0, 200000,     1
-	;clt_a   364 size 4
-	;clt_b   368 size 4
-	;clt_c   372 size 4
-
-	iat_tempC_1                  = scalar,  F32,    540,        "°C",       1,   0,    -40, 200,     1
-	iat_tempC_2                  = scalar,  F32,    544,        "°C",       1,   0,    -40, 200,     1
-	iat_tempC_3                  = scalar,  F32,    548,        "°C",       1,   0,    -40, 200,     1
-	iat_resistance_1                  = scalar,  F32,    552,        "Ohm",      1,   0,    0, 200000,     1
-	iat_resistance_2                  = scalar,  F32,    556,        "Ohm",      1,   0,    0, 200000,     1
-	iat_resistance_3                  = scalar,  F32,    560,        "Ohm",      1,   0,    0, 200000,     1
-	iat_bias_resistor                = scalar,  F32,    564,        "Ohm",      1,   0,    0, 200000,     1
-	;iat_a  404 size 4
-	;iat_b  408 size 4
-	;iat_c  410 size 4	
+	map_sensor_type					= bits,	U32,	492,	[0:1] "Custom", "DENSO183", "MPX4250", "INVALID"
+	map_sensor_hwChannel			= bits,	U32,	496,	[0:3] "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
+	clt_tempC_1						= scalar, F32,	500,	"*C", 1, 0, -40, 200, 1
+	clt_tempC_2						= scalar, F32,	504,	"*C", 1, 0, -40, 200, 1
+	clt_tempC_3						= scalar, F32,	508,	"*C", 1, 0, -40, 200, 1
+	clt_resistance_1				= scalar, F32,	512,	"Ohm", 1, 0, 0, 200000, 1
+	clt_resistance_2				= scalar, F32,	516,	"Ohm", 1, 0, 0, 200000, 1
+	clt_resistance_3				= scalar, F32,	520,	"Ohm", 1, 0, 0, 200000, 1
+	clt_bias_resistor				= scalar, F32,	524,	"Ohm", 1, 0, 0, 200000, 1
+;skipping clt_s_h_a offset 528
+;skipping clt_s_h_b offset 532
+;skipping clt_s_h_c offset 536
+	iat_tempC_1						= scalar, F32,	540,	"*C", 1, 0, -40, 200, 1
+	iat_tempC_2						= scalar, F32,	544,	"*C", 1, 0, -40, 200, 1
+	iat_tempC_3						= scalar, F32,	548,	"*C", 1, 0, -40, 200, 1
+	iat_resistance_1				= scalar, F32,	552,	"Ohm", 1, 0, 0, 200000, 1
+	iat_resistance_2				= scalar, F32,	556,	"Ohm", 1, 0, 0, 200000, 1
+	iat_resistance_3				= scalar, F32,	560,	"Ohm", 1, 0, 0, 200000, 1
+	iat_bias_resistor				= scalar, F32,	564,	"Ohm", 1, 0, 0, 200000, 1
+;skipping iat_s_h_a offset 568
+;skipping iat_s_h_b offset 572
+;skipping iat_s_h_c offset 576
 
 	sparkDwellBins          = array,   F32,    580,  [8],   "RPM",     1,   0.0,      0.0,  18000,   2; size 32
 	sparkDwell              = array,   F32,    612,  [8],   "ms",	   1,   0.0,      0.0,  30.0,    2; size 32
