--- a/firmware/rusefi_config.ini
+++ b/firmware/rusefi_config.ini
@@ -18,6 +18,8 @@ float baseFuel;;"ms",       1,     0,    0, 200,     1
 int16_t rpm;This value controls what RPM values we consider 'cranking' (any RPM below 'crankingRpm')\nAnything above 'crankingRpm' would be 'running';"RPM",      1,     0,    0, 3000,      0
 end_struct
 
+bits air_pressure_sensor_type_e U32 [0:1]  "Custom", "DENSO183", "MPX4250", "INVALID"
+bits adc_channel_e U32 [0:3]  "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
 
 struct air_pressure_sensor_config_s
 float valueAt0;kPa value at zero volts;"kpa",      1,     0,    0, 450,     2
@@ -39,14 +41,14 @@ air_pressure_sensor_config_s sensor
 end_struct
 
 struct ThermistorConf @brief Thermistor curve parameters
-float tempC_1;these values are in Celcuus
-float tempC_2
-float tempC_3
-float resistance_1
-float resistance_2
-float resistance_3
+float tempC_1;these values are in Celcuus;"*C",       1,     0,    -40, 200,     1
+float tempC_2;;"*C",       1,     0,    -40, 200,     1
+float tempC_3;;"*C",       1,     0,    -40, 200,     1
+float resistance_1;;"Ohm",      1,     0,    0, 200000,     1
+float resistance_2;;"Ohm",      1,     0,    0, 200000,     1
+float resistance_3;;"Ohm",      1,     0,    0, 200000,     1
 
-	float bias_resistor;
+	float bias_resistor;;"Ohm",      1,     0,    0, 200000,     1
 
 	float s_h_a;
 	float s_h_b;
@@ -98,8 +100,8 @@ cranking_parameters_s cranking
 MAP_sensor_config_s map;@see hasMapSensor\n@see isMapAveragingEnabled
 
 
-ThermistorConf cltThermistorConf;todo: merge with channel settings, use full-scale Thermistor here!
-ThermistorConf iatThermistorConf;
+ThermistorConf clt;todo: merge with channel settings, use full-scale Thermistor here!
+ThermistorConf iat;
 
 #define DWELL_COUNT 8
 
