--- a/trunk/firmware/tunerstudio/rusefi.ini
+++ b/trunk/firmware/tunerstudio/rusefi.ini
@@ -85,25 +85,22 @@ enable2ndByteCanID = false
 ;skipping iat_s_h_a offset 568
 ;skipping iat_s_h_b offset 572
 ;skipping iat_s_h_c offset 576
+	sparkDwellBins					= array, F32,	580,	[8],	"RPM", 1, 0.0, 0.0, 18000, 2
+	sparkDwell						= array, F32,	612,	[8],	"ms", 1, 0.0, 0.0, 30.0, 2
+	ignitionLoadBins				= array, F32,	644,	[16],	"Load", 1, 0.0, 0, 300.0, 2
+	ignitionRpmBins					= array, F32,	708,	[16],	"RPM", 1, 0.0, 0, 18000.0, 2
+	ignitionBaseAngle				= scalar, F32,	772,	"RPM", 1, 0, 0, 3000.0, 0
+	crankingChargeAngle				= scalar, F32,	776,	"deg", 1, 0, 0, 3000.0, 0
+	timingMode						= bits,	U32,	780,	[0:0], "dynamic", "fixed"
+	fixedModeTiming					= scalar, F32,	784,	"RPM", 1, 0, 0, 3000.0, 0
+	injectorLag						= scalar, F32,	788,	"msec", 1, 0, -10, 25.50, 2
+	fuelLoadBins					= array, F32,	792,	[16],	"V", 1, 0, 0.0, 300.0, 2
+	fuelRpmBins						= array, F32,	856,	[16],	"RPM", 1, 0, 0.0, 25500.0, 2
+	displacement					= scalar, F32,	920,	"L", 1, 0, 0, 1000.0, 2
+	rpmHardLimit					= scalar, S32,	924,	"rpm", 1, 0, 0, 10000.0, 2
+;skipping crankingInjectionMode offset 928
+;skipping injectionMode offset 932
 
-	sparkDwellBins          = array,   F32,    580,  [8],   "RPM",     1,   0.0,      0.0,  18000,   2; size 32
-	sparkDwell              = array,   F32,    612,  [8],   "ms",	   1,   0.0,      0.0,  30.0,    2; size 32
-	
-	ignitionKeyBins         = array,   F32,    644, [16],   "Load",   1,   0.0,        0,  300.0,   2; size 64
-	ignitionRpmBins         = array,   F32,    708, [16],   "RPM",	   1,   0.0,        0,  18000.0, 2; size 64
-	
-	ignitonOffset           = scalar,  U32,    772,         "RPM",    1,      0,       0,  3000.0,      0 ; size 4
-	crankingChargeAngle     = scalar,  F32,    776,         "deg",    1,      0,       0,  3000.0,      0 ; size 4
-	timingMode              = bits,    U32,    780, [0:0], "dynamic", "fixed"
-	fixedModeTiming         = scalar,  U32,    784,         "RPM",    1,      0,       0,  3000.0,      0 ; size 4
-	injectorLag		        = scalar,  F32,    788,          "msec",     1,     0,      -10,   25.50,  2; size 4
-	
-	fuelKeyBins             = array,   F32,    792, [16],   "V",	   1,      0,      0.0,  300.0,   2; size 132
-	fuelRpmBins             = array,   F32,    856, [16],   "RPM",	   1,      0,      0.0,  25500.0,   2; size 92
-	displacement            = scalar,  F32,    920,         "L",    1,      0,       0,  1000.0,        2 ; size 4
-	rpmHardLimit            = scalar,  U32,    924,         "rpm",    1,      0,       0, 10000.0,        2 ; size 4
-	crankingInjectionMode   = scalar,  U32,    928,         "enum",    1,      0,       0,  1000.0,        2 ; size 4
-	injectionMode           = scalar,  U32,    932,         "enum",    1,      0,       0,  1000.0,        2 ; size 4
 	globalTriggerOffsetAngle = scalar, F32,    936,         "deg",    1,      0,       0,  720,      0 ; size 4
 	analogInputDividerCoefficient=scalar, F32, 940,         "coef",    1,      0,    0.01,  10.0,        2 ; size 4
 	fuelAlgorithm           = bits,    U32,    944, [0:1], "MAF", "Alpha-N", "MAP", "SPEED DENSITY"
