--- a/firmware/rusefi_config.ini
+++ b/firmware/rusefi_config.ini
@@ -12,6 +12,8 @@
 ! needed to get a proper TunerStudio file
 struct engine_configuration_s
 
+#define FUEL_RPM_COUNT 16
+#define FUEL_LOAD_COUNT 16
 
 struct cranking_parameters_s
 float baseFuel;;"ms",       1,     0,    0, 200,     1
@@ -111,26 +113,36 @@ ThermistorConf iat;
 #define IGN_RPM_COUNT 16
 
 
-float[DWELL_COUNT] sparkDwellBins;
-	float[DWELL_COUNT] sparkDwell;
+float[DWELL_COUNT] sparkDwellBins;;"RPM",     1,   0.0,      0.0,  18000,   2
+	float[DWELL_COUNT] sparkDwell;;"ms",	   1,   0.0,      0.0,  30.0,    2
 
-	float[IGN_LOAD_COUNT] ignitionLoadBins;
-	float[IGN_RPM_COUNT] ignitionRpmBins;
+	float[IGN_LOAD_COUNT] ignitionLoadBins;;"Load",   1,   0.0,        0,  300.0,   2
+	float[IGN_RPM_COUNT] ignitionRpmBins;;"RPM",	   1,   0.0,        0,  18000.0, 2
 
-float ignitionBaseAngle;this value could be used to offset the whole ignition timing table by a constant
+float ignitionBaseAngle;this value could be used to offset the whole ignition timing table by a constant;"RPM",    1,      0,       0,  3000.0,      0
 
 
-float crankingChargeAngle;While cranking (which causes battery voltage to drop) we can calculate dwell time in shaft\ndegrees, not in absolute time as in running mode.
+float crankingChargeAngle;While cranking (which causes battery voltage to drop) we can calculate dwell time in shaft\ndegrees, not in absolute time as in running mode.;"deg",    1,      0,       0,  3000.0,      0
+
+bits timing_mode_e U32 [0:0], "dynamic", "fixed"
 
 timing_mode_e timingMode;
 
+float fixedModeTiming;This value is used in 'fixed timing' mode, i.e. constant timing\nThis mode is useful for instance while adjusting distributor location;"RPM",    1,      0,       0,  3000.0,      0
+float injectorLag;;"msec",     1,     0,      -10,   25.50,  2
 
 
 
+float[FUEL_LOAD_COUNT] fuelLoadBins;;"V",	   1,      0,      0.0,  300.0,   2
+float[FUEL_RPM_COUNT] fuelRpmBins;RPM is float and not integer in order to use unified methods for interpolation;"RPM",	   1,      0,      0.0,  25500.0,   2
 
+float displacement;Engine displacement, in liters\nsee also cylindersCount;"L",    1,      0,       0,  1000.0,        2
+	int rpmHardLimit;;"rpm",    1,      0,       0, 10000.0,        2
 
+injection_mode_e crankingInjectionMode;
+	injection_mode_e injectionMode;
 
-
+float globalTriggerAngleOffset;
 
 bits analog_chart_e S32         [0:1], "none", "trigger", "MAP", "INVALID"		
 analog_chart_e analogChartMode;
