--- a/trunk/firmware/tunerstudio/rusefi.ini
+++ b/trunk/firmware/tunerstudio/rusefi.ini
@@ -100,13 +100,14 @@ enable2ndByteCanID = false
 	rpmHardLimit					= scalar, S32,	924,	"rpm", 1, 0, 0, 10000.0, 2
 ;skipping crankingInjectionMode offset 928
 ;skipping injectionMode offset 932
+	globalTriggerAngleOffset		= scalar, F32,	936,	"deg", 1, 0, 0, 720, 0
+	analogInputDividerCoefficient	= scalar, F32,	940,	"coef", 1, 0, 0.01, 10.0, 2
+	algorithm						= bits,	U32,	944,	[0:1], "MAF", "Alpha-N", "MAP", "SPEED DENSITY"
+	vbattDividerCoeff				= scalar, F32,	948,	"coef", 1, 0, 0.01, 20.0, 2
+	fanOnTemperature				= scalar, F32,	952,	"*C", 1, 0, 0, 1000.0, 2
+	fanOffTemperature				= scalar, F32,	956,	"*C", 1, 0, 0, 1000.0, 2
 
-	globalTriggerOffsetAngle = scalar, F32,    936,         "deg",    1,      0,       0,  720,      0 ; size 4
-	analogInputDividerCoefficient=scalar, F32, 940,         "coef",    1,      0,    0.01,  10.0,        2 ; size 4
-	fuelAlgorithm           = bits,    U32,    944, [0:1], "MAF", "Alpha-N", "MAP", "SPEED DENSITY"
-	VBattDividerCoefficient	= scalar,  F32,    948,         "coef",    1,      0,    0.01,  20.0,        2 ; size 4
-	FanONTemperature	    = scalar,  F32,    952,         "°C",    1,      0,       0,  1000.0,        2 ; size 4
-	FanOffTemperature	    = scalar,  F32,    956,         "°C",    1,      0,       0,  1000.0,        2 ; size 4
+
 ;	canNbcType              = bits,    U32,    968, [0:1], "BMW", "FIAT", "VAG" , "INVALID"
 	canSleepPeriod		    = scalar,  F32,    972,         "RPM",    1,      0,       0,  1000.0,        2 ; size 4
 	nCylinders   		    = bits,    U32,    976, [0:3], "INVALID", 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, "INVALID", "INVALID", "INVALID"
