--- a/firmware/tunerstudio/rusefi.ini
+++ b/firmware/tunerstudio/rusefi.ini
@@ -109,7 +109,7 @@ enable2ndByteCanID = false
 
 
 ;	canNbcType              = bits,    U32,    968, [0:1], "BMW", "FIAT", "VAG" , "INVALID"
-	canSleepPeriod		    = scalar,  F32,    972,         "RPM",    1,      0,       0,  1000.0,        2 ; size 4
+	canSleepPeriod		    = scalar,  F32,    972,         "RPM",    1,      0,       0,  1000.0,        2
 	nCylinders   		    = bits,    U32,    976, [0:3], "INVALID", 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, "INVALID", "INVALID", "INVALID"
 	IgnitionMode		    = bits,    U32,    980, [0:1], "One coil", "Individual Coils", "Wasted", "INVALID"
 	FiringOrder		        = bits,    U32,    984, [0:2], "One Cylinder", "1-3-4-2", "1-2-4-3", "1-3-2-4", "1-5-3-6-2-4", "1-8-4-3-6-5-7-2", "INVALID", "INVALID"
