--- a/trunk/firmware/rusefi_config.ini
+++ b/trunk/firmware/rusefi_config.ini
@@ -151,6 +151,29 @@ float vbattDividerCoeff;;"coef",    1,      0,    0.01,  20.0,        2
 float fanOnTemperature;Cooling fan turn-on temperature threshold, in Celsuis;"*C",    1,      0,       0,  1000.0,        2
 float fanOffTemperature;Cooling fan turn-off temperature threshold, in Celsuis;"*C",    1,      0,       0,  1000.0,        2
 
+brain_pin_e vehicleSpeedSensorInputPin;
+float vehicleSpeedCoef;This coefficient translates vehicle speed input frequency (in Hz) into vehicle speed, km/h
+
+bits canNbcType U32 [0:1], "BMW", "FIAT", "VAG" , "INVALID"
+can_nbc_e canNbcType;
+
+int canSleepPeriod;;"RPM",    1,      0,       0,  1000.0,        2
+int cylindersCount;
+ignition_mode_e ignitionMode;
+firing_order_e firingOrder;
+float rpmMultiplier;todo: refactor this, see operation_mode_e
+display_mode_e displayMode;
+
+log_format_e logFormat;
+	int firmwareVersion;
+	int HD44780width;
+	int HD44780height;
+	adc_channel_e tpsAdcChannel;
+	int overrideCrankingIgnition;
+	int analogChartFrequency;
+
+struct trigger_config_s @brief Trigger wheel(s) configuration
+end_struct
 
 !bits analog_chart_e S32         [0:1], "none", "trigger", "MAP", "INVALID"		
 !analog_chart_e analogChartMode;
