https://sourceforge.net/p/rusefi/tickets/125/

--- a/firmware/rusefi_config.ini
+++ b/firmware/rusefi_config.ini
@@ -173,7 +173,33 @@ log_format_e logFormat;
 	int analogChartFrequency;
 
 struct trigger_config_s @brief Trigger wheel(s) configuration
+	trigger_type_e type;
+
+	int customIsSynchronizationNeeded;
+
+	int customTotalToothCount;
+	int customSkippedToothCount;
+
+	float customSyncRatioFrom;
+	float customSyncRatioTo;
+
+	int customUseRiseEdge;
 end_struct
+
+trigger_config_s trigger;
+
+!bits spi_device_e 
+	spi_device_e hip9011SpiDevice;
+	adc_channel_e vbattAdcChannel;
+	
+	
+float globalFuelCorrection;
+
+
+	adc_channel_e cltAdcChannel;todo: merge with channel settings, use full-scale Thermistor!
+	adc_channel_e iatAdcChannel;
+	adc_channel_e mafAdcChannel;	
+	
 
 !bits analog_chart_e S32         [0:1], "none", "trigger", "MAP", "INVALID"		
 !analog_chart_e analogChartMode;
