https://sourceforge.net/p/rusefi/tickets/125/

--- a/firmware/rusefi_config.ini
+++ b/firmware/rusefi_config.ini
@@ -200,6 +200,27 @@ float globalFuelCorrection;
 	adc_channel_e iatAdcChannel;
 	adc_channel_e mafAdcChannel;	
 	
+struct afr_sensor_s
+	adc_channel_e afrAdcChannel;
+	float v1;
+	float value1;
+	float v2;
+	float value2;
+
+end_struct	
+	
+afr_sensor_s afrSensor;@see hasAfrSensor
+float injectionAngle;this is about deciding when the injector starts it's squirt
+	float crankingTimingAngle;
+
+	float diffLoadEnrichmentCoef;
+	
+air_pressure_sensor_config_s baroSensor;@see hasBaroSensor	
+float[FUEL_LOAD_COUNT] veLoadBins;
+	float[FUEL_RPM_COUNT] veRpmBins;
+	float[FUEL_LOAD_COUNT] afrLoadBins;
+	float[FUEL_RPM_COUNT] afrRpmBins;
+		
 
 !bits analog_chart_e S32         [0:1], "none", "trigger", "MAP", "INVALID"		
 !analog_chart_e analogChartMode;
