--- a/trunk/firmware/rusefi_config.ini
+++ b/trunk/firmware/rusefi_config.ini
@@ -20,8 +20,8 @@ float baseFuel;;"ms",       1,     0,    0, 200,     1
 int16_t rpm;This value controls what RPM values we consider 'cranking' (any RPM below 'crankingRpm')\nAnything above 'crankingRpm' would be 'running';"RPM",      1,     0,    0, 3000,      0
 end_struct
 
-bits air_pressure_sensor_type_e U32 [0:1]  "Custom", "DENSO183", "MPX4250", "INVALID"
-bits adc_channel_e U32 [0:3]  "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
+bits air_pressure_sensor_type_e 4 bits, U32, @OFFSET@, [0:1]  "Custom", "DENSO183", "MPX4250", "INVALID"
+bits adc_channel_e 4 bits, U32, @OFFSET@, [0:3]  "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
 
 struct air_pressure_sensor_config_s
 float valueAt0;kPa value at zero volts;"kpa",      1,     0,    0, 450,     2
@@ -63,7 +63,7 @@ end_struct
 
 
 
-bits engine_type_e S32   [0:2], "AUDI_AAN", "DODGE_NEON_1995", "FORD_ASPIRE_1996", "FORD_FIESTA", "NISSAN_PRIMERA", "HONDA_ACCORD", "FORD_INLINE_6_1995", "GY6_139QMB"
+bits engine_type_e 4 bits, S32, @OFFSET@,   [0:2], "AUDI_AAN", "DODGE_NEON_1995", "FORD_ASPIRE_1996", "FORD_FIESTA", "NISSAN_PRIMERA", "HONDA_ACCORD", "FORD_INLINE_6_1995", "GY6_139QMB"
 engine_type_e engineType;http://rusefi.com/wiki/index.php?title=Manual:Engine_Type
 
 int headerMagicValue;this magic number is used to make sure that what we read from Flash is in fact some configuration
@@ -124,7 +124,7 @@ float ignitionBaseAngle;this value could be used to offset the whole ignition ti
 
 float crankingChargeAngle;While cranking (which causes battery voltage to drop) we can calculate dwell time in shaft\ndegrees, not in absolute time as in running mode.;"deg",    1,      0,       0,  3000.0,      0
 
-bits timing_mode_e U32 [0:0], "dynamic", "fixed"
+bits timing_mode_e 4 bits, U32, @OFFSET@ [0:0], "dynamic", "fixed"
 
 timing_mode_e timingMode;
 
@@ -145,7 +145,7 @@ injection_mode_e crankingInjectionMode;
 float globalTriggerAngleOffset;This field is the angle between Top Dead Center (TDC) and the first trigger event.\nKnowing this angle allows us to control timing and other angles in reference to TDC.;"deg",    1,      0,       0,  720, 0
 float analogInputDividerCoefficient;This parameter holds the coefficient of input voltage dividers;"coef",    1,      0,    0.01,  10.0,   2
 
-bits engine_load_mode_e U32 [0:1], "MAF", "Alpha-N", "MAP", "SPEED DENSITY"
+bits engine_load_mode_e 4 bits, U32, @OFFSET@, [0:1], "MAF", "Alpha-N", "MAP", "SPEED DENSITY"
 engine_load_mode_e algorithm;This setting controls which algorithm is used for ENGINE LOAD
 float vbattDividerCoeff;;"coef",    1,      0,    0.01,  20.0,        2
 float fanOnTemperature;Cooling fan turn-on temperature threshold, in Celsuis;"*C",    1,      0,       0,  1000.0,        2
@@ -154,7 +154,7 @@ float fanOffTemperature;Cooling fan turn-off temperature threshold, in Celsuis;"
 brain_pin_e vehicleSpeedSensorInputPin;
 float vehicleSpeedCoef;This coefficient translates vehicle speed input frequency (in Hz) into vehicle speed, km/h
 
-bits canNbcType U32 [0:1], "BMW", "FIAT", "VAG" , "INVALID"
+bits canNbcType 4 bits, U32, @OFFSET@, [0:1], "BMW", "FIAT", "VAG" , "INVALID"
 can_nbc_e canNbcType;
 
 int canSleepPeriod;;"RPM",    1,      0,       0,  1000.0,        2
@@ -222,7 +222,7 @@ float[FUEL_LOAD_COUNT] veLoadBins;
 	float[FUEL_RPM_COUNT] afrRpmBins;
 		
 
-!bits analog_chart_e S32         [0:1], "none", "trigger", "MAP", "INVALID"		
+!bits analog_chart_e 4 bits, S32, @OFFSET@, [0:1], "none", "trigger", "MAP", "INVALID"		
 !analog_chart_e analogChartMode;
 
 end_struct
