https://sourceforge.net/p/rusefi/tickets/125/

--- a/firmware/tunerstudio/rusefi.ini
+++ b/firmware/tunerstudio/rusefi.ini
@@ -38,7 +38,7 @@ enable2ndByteCanID = false
    ;  name           		= array,  type, offset,  shape, units,     scale, translate,    lo,      hi, digits
    ;  name       			= scalar, type, offset,         units,     scale, translate,    lo,      hi, digits
 ;AUTO_GENERATED_SECTION_START
-	engineType						= bits,	S32,	0,	[0:2], "AUDI_AAN", "DODGE_NEON_1995", "FORD_ASPIRE_1996", "FORD_FIESTA", "NISSAN_PRIMERA", "HONDA_ACCORD", "FORD_INLINE_6_1995", "GY6_139QMB"
+	engineType					 = bits, S32, 0, [0:2], "AUDI_AAN", "DODGE_NEON_1995", "FORD_ASPIRE_1996", "FORD_FIESTA", "NISSAN_PRIMERA", "HONDA_ACCORD", "FORD_INLINE_6_1995", "GY6_139QMB"
 ;skipping headerMagicValue offset 4
 	battInjectorLagCorrBins			= array, F32,	8,	[8],	"V", 1, 0, 0.0, 20.0, 2
 	battInjectorLagCorr				= array, F32,	40,	[8],	"ms/V", 1, 0, 0.0, 50.0, 2
@@ -63,8 +63,8 @@ enable2ndByteCanID = false
 	map_samplingWindow				= array, F32,	452,	[8],	"deg", 1, 0, 0.0, 90, 2
 	map_sensor_valueAt0				= scalar, F32,	484,	"kpa", 1, 0, 0, 450, 2
 	map_sensor_valueAt5				= scalar, F32,	488,	"kpa", 1, 0, 0, 450, 2
-	map_sensor_type					= bits,	U32,	492,	[0:1] "Custom", "DENSO183", "MPX4250", "INVALID"
-	map_sensor_hwChannel			= bits,	U32,	496,	[0:3] "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
+	map_sensor_type				 = bits, U32, 492, [0:1] "Custom", "DENSO183", "MPX4250", "INVALID"
+	map_sensor_hwChannel		 = bits, U32, 496, [0:3] "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
 	clt_tempC_1						= scalar, F32,	500,	"*C", 1, 0, -40, 200, 1
 	clt_tempC_2						= scalar, F32,	504,	"*C", 1, 0, -40, 200, 1
 	clt_tempC_3						= scalar, F32,	508,	"*C", 1, 0, -40, 200, 1
@@ -91,7 +91,7 @@ enable2ndByteCanID = false
 	ignitionRpmBins					= array, F32,	708,	[16],	"RPM", 1, 0.0, 0, 18000.0, 2
 	ignitionBaseAngle				= scalar, F32,	772,	"RPM", 1, 0, 0, 3000.0, 0
 	crankingChargeAngle				= scalar, F32,	776,	"deg", 1, 0, 0, 3000.0, 0
-	timingMode						= bits,	U32,	780,	[0:0], "dynamic", "fixed"
+	timingMode					 = bits, U32, 780 [0:0], "dynamic", "fixed"
 	fixedModeTiming					= scalar, F32,	784,	"RPM", 1, 0, 0, 3000.0, 0
 	injectorLag						= scalar, F32,	788,	"msec", 1, 0, -10, 25.50, 2
 	fuelLoadBins					= array, F32,	792,	[16],	"V", 1, 0, 0.0, 300.0, 2
@@ -101,8 +101,8 @@ enable2ndByteCanID = false
 ;skipping crankingInjectionMode offset 928
 ;skipping injectionMode offset 932
 	globalTriggerAngleOffset		= scalar, F32,	936,	"deg", 1, 0, 0, 720, 0
-	analogInputDividerCoefficient	= scalar, F32,	940,	"coef", 1, 0, 0.01, 10.0, 2
-	algorithm						= bits,	U32,	944,	[0:1], "MAF", "Alpha-N", "MAP", "SPEED DENSITY"
+	analogInputDividerCoefficient		= scalar, F32,	940,	"coef", 1, 0, 0.01, 10.0, 2
+	algorithm					 = bits, U32, 944, [0:1], "MAF", "Alpha-N", "MAP", "SPEED DENSITY"
 	vbattDividerCoeff				= scalar, F32,	948,	"coef", 1, 0, 0.01, 20.0, 2
 	fanOnTemperature				= scalar, F32,	952,	"*C", 1, 0, 0, 1000.0, 2
 	fanOffTemperature				= scalar, F32,	956,	"*C", 1, 0, 0, 1000.0, 2
