--- a/trunk/firmware/rusefi_config.ini
+++ b/trunk/firmware/rusefi_config.ini
@@ -2,7 +2,7 @@
 ! this file defines the format of rusEfi persistent configuration structure
 ! this file is processed by ../java_tools/config_definition.jar tool
 !
-! comments start with '#'
+! comments start with '!'
 !
 ! each field is declared as
 ! type name;comment
@@ -305,6 +305,13 @@ spi_device_e digitalPotentiometerSpiDevice;Digital Potentiometer is used by stoc
 	brain_pin_e canTxPin;
 	brain_pin_e canRxPin;
 	
+#define TRIGGER_SIMULATOR_PIN_COUNT 3
+	brain_pin_e[TRIGGER_SIMULATOR_PIN_COUNT] triggerSimulatorPins;
+	pin_output_mode_e[TRIGGER_SIMULATOR_PIN_COUNT] triggerSimulatorPinModes;
+
+	brain_pin_e o2heaterPin;
+	pin_output_mode_e o2heaterPinModeTodO;
+
 
 end_struct	
 	
