https://sourceforge.net/p/rusefi/tickets/125/

--- a/firmware/rusefi_config.ini
+++ b/firmware/rusefi_config.ini
@@ -312,6 +312,34 @@ spi_device_e digitalPotentiometerSpiDevice;Digital Potentiometer is used by stoc
 	brain_pin_e o2heaterPin;
 	pin_output_mode_e o2heaterPinModeTodO;
 
+bit is_enabled_spi_1
+bit is_enabled_spi_2
+	bit is_enabled_spi_3
+	bit isSdCardEnabled
+	bit isFastAdcEnabled
+	bit isEngineControlEnabled
+	bit isHip9011Enabled
+
+#define LOGIC_ANALYZER_CHANNEL_COUNT 4
+
+	brain_pin_e[LOGIC_ANALYZER_CHANNEL_COUNT] logicAnalyzerPins;
+	uint8_t[LOGIC_ANALYZER_CHANNEL_COUNT] logicAnalyzerMode;default or inverted input
+
+	int unrealisticRpmThreashold;
+
+	pin_output_mode_e mainRelayPinMode;
+
+	egt_cs_array_t max31855_cs;
+
+	spi_device_e max31855spiDevice;
+#define LE_COMMAND_COUNT 16
+
+	brain_pin_e[LE_COMMAND_COUNT] fsioPins;
+	pin_output_mode_e[LE_COMMAND_COUNT] gpioPinModes;
+
+	brain_pin_e[JOYSTICK_PIN_COUNT] joystickPins;
+
+
 
 end_struct	
 	
