https://sourceforge.net/p/rusefi/tickets/125/

--- a/firmware/rusefi_config.ini
+++ b/firmware/rusefi_config.ini
@@ -157,31 +157,42 @@ float vehicleSpeedCoef;This coefficient translates vehicle speed input frequency
 custom canNbcType 4 bits, U32, @OFFSET@, [0:1], "BMW", "FIAT", "VAG" , "INVALID"
 can_nbc_e canNbcType;
 
-int canSleepPeriod;;"RPM",    1,      0,       0,  1000.0,        2
+int canSleepPeriod;;"ms",    1,      0,       0,  1000.0,        2
 int cylindersCount;
+
+custom ignition_mode_e 4 bits,    U32,    %OFFSET%, [0:1], "One coil", "Individual Coils", "Wasted", "INVALID"
 ignition_mode_e ignitionMode;
+
+custom firing_order_e 4 bits,    U32,    %OFFSET%, [0:2], "One Cylinder", "1-3-4-2", "1-2-4-3", "1-3-2-4", "1-5-3-6-2-4", "1-8-4-3-6-5-7-2", "INVALID", "INVALID"
 firing_order_e firingOrder;
+
 float rpmMultiplier;todo: refactor this, see operation_mode_e
+
+custom display_mode_e 4 bits,    U32,    %OFFSET%, [0:1], "none", "hd44780", "hd44780 over pcf8574", "INVALID"
 display_mode_e displayMode;
 
+custom log_format_e 4 bits,    U32,    %OFFSET%, [0:0], "native", "Mega Log Viewer"
 log_format_e logFormat;
-	int firmwareVersion;
-	int HD44780width;
-	int HD44780height;
+	int firmwareVersion;"index",      1,      0,       0, 300,      0
+	int HD44780width;"index",      1,      0,       0, 300,      0
+	int HD44780height;"index",      1,      0,       0, 300,      0
+	
 	adc_channel_e tpsAdcChannel;
 	int overrideCrankingIgnition;
 	int analogChartFrequency;
 
 struct trigger_config_s @brief Trigger wheel(s) configuration
+
+custom trigger_type_e 4 bits,    U32,   %OFFSET%, [0:3], "custom toothed wheel", "ford aspire", "dodge neon", "Miata NA", "Miata NB", "GM_7X", "Cooper", "Escort GT", "60/2", "36/1", "Accord CD", "MITSU", "INVALID", "INVALID", "INVALID", "INVALID"
 	trigger_type_e type;
 
 	int customIsSynchronizationNeeded;
 
-	int customTotalToothCount;
-	int customSkippedToothCount;
+	int customTotalToothCount;;"number",    1,      0.0,       0,  1000.0,        2
+	int customSkippedToothCount;;"number",    1,      0.0,       0,  1000.0,        2
 
-	float customSyncRatioFrom;
-	float customSyncRatioTo;
+	float customSyncRatioFrom;;"number",    1,      0.0,       0,  1000.0,        2
+	float customSyncRatioTo;;"number",    1,      0.0,       0,  1000.0,        2
 
 	int customUseRiseEdge;
 end_struct
@@ -329,6 +340,7 @@ bit is_enabled_spi_2
 
 	pin_output_mode_e mainRelayPinMode;
 
+custom egt_cs_array_t 32 todo array? type?
 	egt_cs_array_t max31855_cs;
 
 	spi_device_e max31855spiDevice;
@@ -339,12 +351,100 @@ bit is_enabled_spi_2
 
 	brain_pin_e[JOYSTICK_PIN_COUNT] joystickPins;
 
+	brain_pin_e triggerErrorPin;This pin is used for debugging - snap a logic analyzer on it and see if it's ever high
+	
+	pin_output_mode_e triggerErrorPinMode;
 
+	float idleSolenoidPwm;value between 0 and 1
+	brain_pin_e acRelayPin;
+	pin_output_mode_e acRelayPinMode;
+
+	int16_t[LE_COMMAND_COUNT] fsioFrequency;
+
+	brain_pin_e hip9011CsPin;
+	brain_pin_e hip9011IntHoldPin;
+	brain_pin_e hip9011OutPin;
+
+	float[LE_COMMAND_COUNT] fsio_setting;
+	brain_pin_e spi1mosiPin;
+	brain_pin_e spi1misoPin;
+	brain_pin_e spi1sckPin;
+	brain_pin_e spi2mosiPin;
+	brain_pin_e spi2misoPin;
+	brain_pin_e spi2sckPin;
+	brain_pin_e spi3mosiPin;
+	brain_pin_e spi3misoPin;
+	brain_pin_e spi3sckPin;
+
+	float hip9011Gain;
+	brain_pin_e joystickCenterPin;
+	brain_pin_e joystickAPin;
+	brain_pin_e joystickBPin;
+	brain_pin_e joystickCPin;
+	brain_pin_e joystickDPin;
+
+custom analog_chart_e 4 bits, S32, @OFFSET@, [0:1], "none", "trigger", "MAP", "INVALID"		
+analog_chart_e analogChartMode;
+	int[6] unusedbs;
+
+custom le_formula_t 200 todo
+le_formula_t[LE_COMMAND_COUNT] le_formulas;
 
 end_struct	
 	
+board_configuration_s bc;
+bit hasMapSensor
 
-!custom analog_chart_e 4 bits, S32, @OFFSET@, [0:1], "none", "trigger", "MAP", "INVALID"		
-!analog_chart_e analogChartMode;
+
+	adc_channel_e hipOutputChannel;
+
+	idle_mode_e idleMode;
+
+	bit isInjectionEnabled
+
+
+	uint32_t digitalChartSize;
+
+	float injectorFlow;
+
+	float[CRANKING_CURVE_SIZE] crankingFuelCoef;
+	float[CRANKING_CURVE_SIZE] crankingFuelBins;
+
+	float[CRANKING_CURVE_SIZE] crankingCycleCoef;
+	float[CRANKING_CURVE_SIZE] crankingCycleBins;
+
+	float ignitionDwellForCrankingMs;
+
+	int targetIdleRpm;
+
+	adc_channel_e acSwitchAdc;A/C button input handled as analog input
+
+	int ignMathCalculateAtIndex;
+
+	int16_t acCutoffLowRpm;
+	int16_t acCutoffHighRpm;
+
+	int16_t acIdleRpmBump;
+	int16_t unusedShort;
+
+	adc_channel_e vRefAdcChannel;
+
+	float knockDetectionWindowStart;
+	float knockDetectionWindowEnd;
+
+	float cylinderBore;Cylinder diameter, in mm.
+
+	brain_pin_e clutchUpPin;Some vehicles have a switch to indicate that clutch pedal is all the way up
+	pin_input_mode_e clutchUpPinMode;
+	float hipThreshold;
+	brain_pin_e[LE_COMMAND_COUNT] fsioInputs;
+	pin_input_mode_e[LE_COMMAND_COUNT] fsioInputModes;
+	int[149] unused3;
+
+	le_formula_t timingMultiplier;
+	le_formula_t timingAdditive;
+
+	fuel_table_t injectionPhase;
+
 
 end_struct
