--- a/firmware/tunerstudio/rusefi.ini
+++ b/firmware/tunerstudio/rusefi.ini
@@ -463,7 +463,7 @@ fileVersion = { 20150112 }
       rpmAcceleration = scalar,  F32,    104, "dRpm",         1,         0
       egoCorrection   = { 1 }     
       time            = { timeNow }
-      engineLoad      = { fuelAlgorithm == 0 ? MAF : TPS }
+      engineLoad      = { algorithm == 0 ? MAF : TPS }
 
 [CurveEditor]
 	curve = dwellCorrection, "Dwell time RPM based"
@@ -692,11 +692,11 @@ fileVersion = { 20150112 }
 		subMenu = crankingFuelCurve,	    "Cranking Coolant Temp correction"
 		subMenu = crankingDurationCurve,	"Cranking Duration correction"
 		subMenu = std_separator
-		subMenu = fuelTableTbl,				"Fuel Table", {fuelAlgorithm != 3}		
+		subMenu = fuelTableTbl,				"Fuel Table", {algorithm != 3}		
 		subMenu = iatFuelCorrCurve,			"Intake air temp fuel correction"
 		subMenu = cltFuelCorrCurve,			"Coolant temp fuel correction"
-        subMenu = veTableTbl,           	"VE Table", {fuelAlgorithm == 3}           
-        subMenu = afrTableTbl,          	"Targe AFR Table", {fuelAlgorithm == 3}           
+        subMenu = veTableTbl,           	"VE Table", {algorithm == 3}           
+        subMenu = afrTableTbl,          	"Targe AFR Table", {algorithm == 3}           
 		subMenu = std_separator
 		subMenu = ignitionTableTbl,			"Ignition Table"
 		subMenu = std_separator
@@ -1000,7 +1000,7 @@ fileVersion = { 20150112 }
 		field = "tunerStudioSerialSpeed", tunerStudioSerialSpeed		
 		field = "RPM Hard Limit",         	    		rpmHardLimit
 		field = ""
-		field = "Fuel Algorithm",						fuelAlgorithm
+		field = "Fuel Algorithm",						algorithm
 		field = ""
 		field = "analog chart",         	    		analogChartMode
 		field = "#System ON/OFF"
