https://sourceforge.net/p/rusefi/tickets/125/

--- a/firmware/rusefi_config.ini
+++ b/firmware/rusefi_config.ini
@@ -394,6 +394,20 @@ end_struct
 	
 board_configuration_s bc;
 bit hasMapSensor
+	bit hasIatSensor
+	bit hasBaroSensor
+	bit hasAfrSensor
+	bit useConstantDwellDuringCranking 
+	bit isDigitalChartEnabled 
+	bit isCanEnabled
+	bit hasCltSensor
+	bit canReadEnabled
+	bit canWriteEnabled
+	bit hasVehicleSpeedSensor
+	bit isJoystickEnabled
+	bit isGpsEnabled
+	bit hasMafSensor
+	bit hasTpsSensor
 
 
 	adc_channel_e hipOutputChannel;
@@ -401,11 +415,22 @@ bit hasMapSensor
 	idle_mode_e idleMode;
 
 	bit isInjectionEnabled
+	bit isIgnitionEnabled
+	bit isCylinderCleanupEnabled
+	bit secondTriggerChannelEnabled
+	bit needSecondTriggerInput
+	bit isMapAveragingEnabled
+	bit isMilEnabled
+	bit isFuelPumpEnabled
+	bit isTunerStudioEnabled
+	bit isWaveAnalyzerEnabled
+	bit isIdleThreadEnabled
+	bit isPrintTriggerSynchDetails
 
 
 	uint32_t digitalChartSize;
 
-	float injectorFlow;
+	float injectorFlow;cc/min, cubic centimeter per minute\nBy the way, g/s = 0.125997881 * (lb/hr)\ng/s = 0.125997881 * (cc/min)/10.5\ng/s = 0.0119997981 * cc/min
 
 	float[CRANKING_CURVE_SIZE] crankingFuelCoef;
 	float[CRANKING_CURVE_SIZE] crankingFuelBins;
