--- a/firmware/tunerstudio/rusefi.ini
+++ b/firmware/tunerstudio/rusefi.ini
@@ -534,7 +534,7 @@ fileVersion = { 20150112 }
    table = fuelTableTbl,  fuelTableMap,  "Fuel Table",   1
       ;       constant, variable
       xBins       = fuelRpmBins,  rpm
-      yBins       = fuelKeyBins,  engineLoad
+      yBins       = fuelLoadBins,  engineLoad
       zBins       = fuelTable
 ;      gridHeight  = 2.0
       gridOrient  = 250,   0, 340 ; Space 123 rotation of grid in degrees.
@@ -543,7 +543,7 @@ fileVersion = { 20150112 }
    table = ignitionTableTbl,  ignitionTableMap,  "Ignition Table",   1
       ;       constant, variable
       xBins       = ignitionRpmBins,  rpm
-      yBins       = ignitionKeyBins,  engineLoad
+      yBins       = ignitionLoadBins,  engineLoad
       zBins       = ignitionTable
 ;      gridHeight  = 2.0
       gridOrient  = 250,   0, 340 ; Space 123 rotation of grid in degrees.
@@ -619,7 +619,7 @@ fileVersion = { 20150112 }
 
 ;         =   expression,            off-label,            on-label,            off-bg, off-fg, on-bg, on-fg
 	; important status
-    indicator = { firmwareTsVersion == fileVersion }, "NOT COMPATIBLE",   "",   red, black, green,   black
+    indicator = { firmwareTsVersion == fileVersion }, "NOT COMPATIBLE",   "OK",   red, black, green,   black
     indicator = { ind_check_engine }, "ok",      "Check engine",       green,  black,  red, black
     indicator = { ind_ignition_enabled}, "no ignition",   "ignition",   red, black, green,   black
     indicator = { ind_injection_enabled}, "no injection",   "injection",   red, black, green,   black
@@ -737,7 +737,7 @@ fileVersion = { 20150112 }
 ;			Engine->Trigger configuration
 	dialog = triggerConfiguration, "Trigger configuration"
 		field = "Trigger type",							trigger_type
-	    field = "globalTriggerOffsetAngle",         	globalTriggerOffsetAngle
+	    field = "globalTriggerAngleOffset",         	globalTriggerAngleOffset
 		field = "#Custom Trigger"
 		field = "Synchronization Needed?",				isSynchronizationNeeded, {trigger_type == 0}
 		field = "total Tooth Count",					totalToothCount, {trigger_type == 0}
@@ -807,7 +807,7 @@ fileVersion = { 20150112 }
 		
 ;			Engine->MAP Sensor Settings
 	dialog = mapSensor, "Sensor Settings", xAxis		
-	    field = "Map type", mapSensorType
+	    field = "Map type", map_sensor_type
 		field = "MAP at minimum voltage",                map_sensor_valueAt0, { map_sensor_type == 0}
 		field = "MAP at maximum voltage",                map_sensor_valueAt5, { map_sensor_type == 0}
 
@@ -828,8 +828,8 @@ fileVersion = { 20150112 }
 
 ;			Engine->Fan Settings
 	dialog = fanSetting, "Fan Settings"
-		field = "Fan On Temperature",					FanONTemperature
-		field = "Fan Off Temperature",					FanOffTemperature		
+		field = "Fan On Temperature",					fanOnTemperature
+		field = "Fan Off Temperature",					fanOffTemperature		
 
 ;			Board->Board inputs
 	dialog	=	triggerInputs,	"Trigger inputs", xAxis
@@ -838,7 +838,7 @@ fileVersion = { 20150112 }
 		
 	dialog = analogInputs, "Analog inputs"
 		field = "Analog Input Divider Coefficient",		analogInputDividerCoefficient 
-		field = "Battery Input Divider Coefficient",	VBattDividerCoefficient
+		field = "Battery Input Divider Coefficient",	vbattDividerCoeff
 		field = "TPS ADC input", 						tpsAdcInput
 		field = "CLT ADC input", 						cltAdcInput
 		field = "IAT ADC input", 						iatAdcInput
